--- a/index.css
+++ b/index.css
@@ -73,13 +73,13 @@ body {
   padding-top: 300px;
 }
 .hero h1{
-  color: #faf9f9(243, 23, 23);
+  color:white;
   text-align: center;
   padding-bottom: 20px;
   
 }
 .hero p{
-  color: #f4f3f3(243, 23, 23);
+  color:white;
   text-align: center;
   padding-bottom: 20px
 }
